--- a/暖通控制/1. PLC.md
+++ b/暖通控制/1. PLC.md
@@ -71,6 +71,17 @@ END_IF;
 3. 设定最大频率和最小频率，频率太大风道噪音大、长期的话风道承受不住。
 ![alt text](image-9.png)![alt text](image-10.png)
 
+## 温度控制水阀
+
+1. 冬季是热水，夏季是冷冻水；温度控制水阀指的是**通过回风温度进行PID控制水阀**。
+2. 冬季有最小开度，为了防止盘管冻裂；夏季不设置最小开度，即回风温度到达目标时可以直接关闭冷冻水（7℃~12℃）阀。
+3. 如果冷热水用的是同一个水管，夏季送冷水、冬季送热水，要对冬季和夏季写两个PLC控制程序，并且要根据时间做两个程序的切换。
+
+## 控制湿度
+
+1. 可以根据送风湿度控制加湿设备，也可以根据回风湿度控制加湿设备 ==> 根据项目情况而定，一般可以用回风湿度控制，但是对于加湿量很大的项目，当回风湿度达到要求的时候房间内湿度可能已经超标了，这种情况适合用送风温度加湿。
+![alt text](image-12.png)
+
 # DDC（直接数字控制器）和 PLC（可编程逻辑控制器）
 
 1. DDC以模拟量为主，PLC以开关量为主；
@@ -93,4 +104,5 @@ END_IF;
 
 # PID
 
-1. PID的输出范围是0~27648，所有被控制的模拟量都要给转换成这个范围内。
+1. **PID的输出范围是0~27648**，所有被控制的**模拟量**都要进行**线性转换**。![alt text](image-11.png)
+2. P值越小变化越平稳。
