--- a/Java/表分区.md
+++ b/Java/表分区.md
@@ -318,3 +318,29 @@ WHERE pf.name = 'biz_energy_consumption_YearIntPartitionPF'
 ORDER BY prv.boundary_id;
 
 ```
+
+## 验证表分区的方法
+
+```sql
+SELECT
+    t.name AS 表名,
+    ps.name AS 分区方案,
+    pf.name AS 分区函数,
+    c.name AS 分区列
+FROM
+    sys.tables t
+JOIN
+    sys.indexes i ON t.object_id = i.object_id AND i.index_id IN (0,1) -- 堆或聚集索引
+JOIN
+    sys.partition_schemes ps ON i.data_space_id = ps.data_space_id
+JOIN
+    sys.partition_functions pf ON ps.function_id = pf.function_id
+JOIN
+    sys.index_columns ic ON i.object_id = ic.object_id AND i.index_id = ic.index_id
+JOIN
+    sys.columns c ON ic.object_id = c.object_id AND ic.column_id = c.column_id
+WHERE
+    t.name = 'biz_energy_consumption' -- 里面是表名
+    AND t.schema_id = SCHEMA_ID('dbo')
+    AND ic.partition_ordinal > 0;
+```
