--- a/暖通其他知识/1.md
+++ b/暖通其他知识/1.md
@@ -1,3 +1,11 @@
 1. 中温水系统、低温水系统
-2. AHU是空气处理机组，新风+回风；FAU是新风机组
+2. 空调系统中的FCU、AHU、PAU、RCU、MAU、FFU、HRV是什么？   
+
+    (1). AHU(Air Handling Units)是空气处理机组,即空调箱，新风+回风；   
+    
+    (2). FAU(Fresh Air Unit)是新风机组;   
+
+    (3). FCU(Fan Coil Unit)风机盘管；   
+
+    (4). PAU(Pre-Cooling Air Unit)预冷空调箱，一般是与风机盘管FCU配合使用，功能是对室外新风进行预处理，再送至风机盘管(FCU).
 <https://zhuanlan.zhihu.com/p/585229702>
