--- a/暖通控制/1. PLC.md
+++ b/暖通控制/1. PLC.md
@@ -106,3 +106,7 @@ END_IF;
 
 1. **PID的输出范围是0~27648**，所有被控制的**模拟量**都要进行**线性转换**。![alt text](image-11.png)
 2. P值越小变化越平稳。
+
+# 变送器
+
+1. 室外温湿度变送器、送风温湿度变送器、滤网压差变送器、供水温度变送器、供水压力变送器、回水温度变送器、回水压力变送器。**变送器就是能输出标准信号的传感器**，**标准信号**是指物理量的形式和数量范围都**符合国际标准的信号**。
