--- a/Java/数据库/2. MySQL进阶_存储引擎.md
+++ b/Java/数据库/2. MySQL进阶_存储引擎.md
@@ -88,6 +88,20 @@ CREATE TABLE `wms_inventory_move_records` (
 
   （2）. 作为MySQL内部操作的临时表，或者必须使用关系型数据库的情况，redis是无法替代的，redis是NoSQL型数据库。
 
+4. **MyISAM 和 InnoDB 有什么区别？** ：   
+
+  (1). InnoDB支持行锁，MyISAM 不支持；   
+
+  (2). InnoDB支持事务，MyISAM 不支持；   
+
+  (3). InnoDB支持外键，MyISAM 不支持；   
+
+  (4). InnoDB的redo log支持数据库异常崩溃，MyISAM 不支持；    
+
+  (5). InnoDB支持MVCC，MyISAM不支持；   
+
+  (6). 性能不一样 todo
+
 # SQL语句在MySQL中的执行过程
 
 ## 查询SQL
