--- a/Java/数据库/3. MySQL进阶_索引.md
+++ b/Java/数据库/3. MySQL进阶_索引.md
@@ -58,7 +58,7 @@ alter table xamp_asset_book
 
 ## 按照索引存储形式分：聚集索引和二级索引
 
-1. 聚集索引：**索引结构的叶子节点保存的是这行的数据**
+1. 聚集索引：**索引结构的叶子节点保存的是这行的数据** ==> **每个表都只能有一个聚集索引，因为数据是按照聚集索引的顺序进行组织、存放的，如果有多个会矛盾。（SQLServer和MySQL InnoDB都是这样的）**
 2. 二级索引：**索引结构的叶子节点保存的是行数据的主键id**
 ![alt text](image-8.png)
 
