--- a/Java/数据库/9. InnoDB引擎.md
+++ b/Java/数据库/9. InnoDB引擎.md
@@ -28,7 +28,7 @@
 3. **InnoDB是怎么实现事务的**
 ![alt text](image-38.png)
 
-### InnoDB redo log 重做日志 ==> 事务的持久性
+### InnoDB redo log 重做日志 ==> 用于已提交事务的崩溃恢复 ==> 保证事务的持久性
 
 1. redo log由两部分组成，一部分是内存中的重做日志缓冲redo log buffer，另一个部分是磁盘中的重做日志文件redo log file。
 ![alt text](image-33.png)
@@ -91,6 +91,31 @@
 
 8. redo日志文件组：硬盘上存储的redo log日志文件不止一个，**是以日志文件组的形式出现，每个大小都一样，环形数组循环写**。![alt text](image-37.png)
 
-### undo log ==> 事务的原子性
+### InnoDB undo log 回滚日志 ==> 用于支持事务回滚和MVCC多版本并发控制 ==> 事务原子性要么全不做要么全做，这就需要事务回滚 ==> undo log用来保证事务的原子性
+
+1. **undo log是为了支持事务回滚（撤销事务、把数据恢复到事务开始前的状态） 和MVCC 多版本并发控制**。
+2. undo log是逻辑日志，记录的是行变更日志，undo log的内容不等价于SQL语句。
+![alt text](image-40.png)
+
+3. undo log的两种类型：   
+
+    (1). Insert undo log,因为insert操作只对当前事务可见，所以事务提交之后可以直接丢弃insert undo log、不参与MVCC；   
+
+    (2). Update undo log，用于update、delete操作，因为是对已有数据的操作，可能会影响其他事务的一致性读（Consistent Read），所以事务提交之后不能马上删除update undo log。
+
+4. undo log与MVCC的配合流程 ==> 当执行一条select语句，InnoDB会取当前行版本判断该版本是否对事务可见，如果可见就直接返回；不可见就找undo log，根据undo log构造历史版本，直到找到第一个当前事务的可见版本然后返回。==> 这就是 **一致性读 Consistent Read**。
+
+5. undolog什么时候会被清理？InnoDB的purge线程会定期扫描，当没有任何事务需要用到这个版本的undo log时，purge线程会回收掉。 ==> 有长事务一直不提交，undo log就会堆积，因此要避免大事务和长事务。
+
+### undo log、 redo log对比
+
+1. undo log发生在数据修改前，redo log发生在数据修改后； undo log是逻辑日志， redo log是物理日志。
+![alt text](image-41.png)
+
+### binlog todo
+
+1. binlog是MySQL Server层的日志，不是InnoDB引擎独有的。
+
+todo 两阶段提交？
 
 ## MVCC
