--- a/Java/数据库/9. InnoDB引擎.md
+++ b/Java/数据库/9. InnoDB引擎.md
@@ -118,4 +118,10 @@
 
 todo 两阶段提交？
 
-## MVCC
+## InnoDB对MVCC的实现
+
+1. 当前读 和 快照读
+
+2. MVCC的概念：Multi-Version Concurrency Control，多版本并发控制。用于在多个并发事务同时读写数据库时保持数据的一致性和隔离性。通过维护一个数据行的多个版本来实现的，**快照读为MySQL实现MVCC提供了一个非阻塞读功能**。
+
+3. MVCC的实现原理：隐藏字段 + readView + undo log
