--- a/Java/Docker/1.Docker.md
+++ b/Java/Docker/1.Docker.md
@@ -59,3 +59,68 @@ docker run -d \
 
 13. docker exec 进入容器
 ![alt text](image-3.png)
+
+14. docker ps -a 这个命令中的-a=--all，显示所有容器，不管是运行中还是已停止的，docker ps这个命令只显示正在运行的容器。
+![alt text](image-4.png) 
+
+上图最后一列是容器名字，COMMAND列表示Docker在容器里执行的“主命令”
+
+15. 查看某个容器的实际配置: docker exec -it <container name> env 如：
+
+    ```
+    // 查看容器名为 nacos的所有配置
+    docker exec -it nacos env
+
+    docker exec -it nacos env | grep nacos
+
+    docker exec -it nacos env | egrep 'NACOS|JAVA|SPRING'
+
+    docker exec -it nacos env | grep -E 'NACOS|JAVA|SPRING'
+    ```
+
+    exec 是在容器内部执行命令；   
+    
+    -it作用是让你像在“容器内部**终端**”里敲命令一样；   
+    
+    **env是Linux内置命令，作用是打印当前进程可见的所有环境变量**。   
+    
+    **| 是Linux管道**，把前一个命令的输出作为后一个命令的输入，即env的输出 -> 交给grep处理   
+
+    grep是搜索文本行，egrep相当于 grep -E
+
+    | 命令                  | 正则能力          | 说明          |
+    | ------------------- | ------------- | ----------- |
+    | `grep`              | **基础正则（BRE）** | 功能弱，很多符号要转义 |
+    | `grep -E`           | **扩展正则（ERE）** | 推荐使用        |
+    | `egrep`             | 等价于 `grep -E` | 老习惯         |
+    | `grep -F` / `fgrep` | **不支持正则**     | 纯字符串匹配（最   快）  |
+
+
+16. **Docker 配置优先级**： 
+
+    ```
+    JVM -D参数  (最高) 
+    Docker env （第二，docker-compose.yml文件时给Docker注入环境变量的配置文件） 
+    applicaiton.properties/yaml （最低）
+    ```
+
+17. JVM -D参数（java -Dkey=value）是Java配置里的“最高优先级”，在JVM启动时设置一个系统属性，仅在当前JVM生效，下次启动时不用就不生效。而docker env时在进程及其子进程生效。
+
+    ```bash
+    // java -Dkey=value 
+
+    java -Dspring.profiles.active=prod -jar app.jar
+    ```
+
+上述命令 ：
+
+        key = spring.profiles.active   
+        value = prod
+
+启动时JVM会做一件事： System.setProperty(""spring.profiles.active", "prod"");  
+
+-jar app.jar 是另一个命令了，告诉JVM用可执行jar模式启动app.jar
+
+
+18. docker exec -it mysql bash 
+![alt text](image-5.png)
