docks: 'docker 命令'

--- a/Java/Docker/1.Docker.md
+++ b/Java/Docker/1.Docker.md
@@ -122,5 +122,9 @@ docker run -d \
 -jar app.jar 是另一个命令了，告诉JVM用可执行jar模式启动app.jar
 
 
-18. docker exec -it mysql bash 
+18. docker exec -it mysql bash  ==> 在名为mysql的Docker容器里启动一个bash终端
 ![alt text](image-5.png)
+
+## 数据卷挂载
+
+1. 
